apps/talos-home/qbittorrent/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.lan`)
      kind: Rule
      middlewares:
        - name: traefik-chain
          namespace: networking
      services:
        - name: qbittorrent
          port: 8080
  tls:
    secretName: qbittorrent-tls
